--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:20.1.6'
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:18.1.0'
     // implementation 'com.google.android.material:material:1.5.0'
     // androidTestImplementation 'com.android.support.test:runner:1.0.2'
     // androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
