--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   dropdown_menu: ^1.1.1
   shared_preferences: ^2.0.0
   flutter_svg: ^0.22.0
-  place_picker: ^0.9.9
+  place_picker: ^0.9.19
   datetime_picker_formfield: any
   geocoder: ^0.2.1
   pedantic: ^1.9.0
@@ -78,6 +78,14 @@ dependencies:
   flutter_math_fork: ^0.3.3+1
   flutter_inappwebview: ^5.3.2
   device_preview: ^1.0.0
+  # flutter_google_places: ^0.3.0
+  # google_api_headers: ^1.5.0+1
+  places_service: ^0.1.0
+  google_api_headers: ^1.0.0
+  google_maps_webservice: ^0.0.19
+  # geocoding: ^2.0.0
+  flutter_google_places: ^0.3.0
+  flutter_typeahead: ^3.1.3
 
 dev_dependencies:
   flutter_test:
