--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,10 @@ dependencies:
   datetime_picker_formfield: any
   geocoder: ^0.2.1
   pedantic: ^1.9.0
-  firebase_auth: ^3.0.2
-  firebase_messaging: ^10.0.5
-  firebase_storage: ^10.0.2
-  cloud_firestore: ^2.5.0
+  firebase_auth: ^3.3.8
+  # firebase_messaging: ^10.0.5
+  firebase_storage: ^10.2.82
+  cloud_firestore: ^3.1.9
   photo_view: ^0.5.0
   page_view_indicators: ^1.3.1
   progress_dialog: ^1.1.0+1
@@ -57,7 +57,6 @@ dependencies:
   showcaseview: ^0.1.5
   connectivity_wrapper: ^1.0.6
   provider: ^5.0.0
-  pin_input_text_field: ^3.0.5
   community_material_icon: ^5.4.55
   google_maps_place_picker: ^2.0.0-nullsafety.1
   # story_view: 0.13.1
@@ -86,6 +85,11 @@ dependencies:
   # geocoding: ^2.0.0
   flutter_google_places: ^0.3.0
   flutter_typeahead: ^3.1.3
+  pin_input_text_field: ^4.4.1
+  # firebase_messaging: ^11.2.7
+  firebase_core_platform_interface: 4.5.1
+  firebase_messaging: ^13.0.4
+  # firebase_messaging: ^9.1.0
 
 dev_dependencies:
   flutter_test:
@@ -99,7 +103,6 @@ dependency_overrides:
   provider: ^6.0.0
   charts_flutter: ^0.12.0
   platform: ^3.1.0
-  pin_input_text_field: ^4.1.2
   visibility_detector: ^0.2.2
 
 flutter_icons:
