--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -48,7 +48,7 @@ android {
     }
     
     defaultConfig {
-        applicationId "xzone.dex.customers"
+        applicationId "thiqatech.dex.customer"
         minSdkVersion 21
         targetSdkVersion 31
         versionCode flutterVersionCode.toInteger()
