--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -104,6 +104,7 @@ dependency_overrides:
   charts_flutter: ^0.12.0
   platform: ^3.1.0
   visibility_detector: ^0.2.2
+  firebase_messaging_platform_interface: 3.1.6
 
 flutter_icons:
   android: "launcher_icon"
