--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,12 +1,19 @@
-{      "dart.flutterSdkPath": "/Users/thiqatech/flutter_2_10_0",
+{
+  "dart.flutterSdkPath": ".fvm/flutter_sdk",
+  // Remove .fvm files from search
+  "search.exclude": {
+    "**/.fvm": true
+  },
+  // Remove from file watching
+  "files.watcherExclude": {
+    "**/.fvm": true
+  },
 
-    "git.supportCancellation": true,
-    "java.configuration.updateBuildConfiguration": "disabled",
-    "compile-hero.disable-compile-files-on-did-save-code": false,
-    "launch": {
-
-
-        "configurations": [],
-        "compounds": []
-    }
+  "git.supportCancellation": true,
+  "java.configuration.updateBuildConfiguration": "disabled",
+  "compile-hero.disable-compile-files-on-did-save-code": false,
+  "launch": {
+    "configurations": [],
+    "compounds": []
+  }
 }
